--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-dsx.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dsx-summit</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon-dsx.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DSX | Digital Summit Experience</title>
+  <meta name="description"
+    content="O Digital Summit Experience é um evento de marketing e vendas com nível nacional sediado no Norte do Brasil." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
