Adição da meta tag theme-color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <title>DSX | Digital Summit Experience</title>
   <meta name="description"
     content="O Digital Summit Experience é um evento de marketing e vendas com nível nacional sediado no Norte do Brasil." />
-</head>
+  <meta
+    name="theme-color"
+    content="#000000"
+  />
+  </head>
 
 <body>
   <div id="root"></div>
