--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   <title>DSX | Digital Summit Experience</title>
   <meta name="description"
     content="O Digital Summit Experience é um evento de marketing e vendas com nível nacional sediado no Norte do Brasil." />
-  <meta
-    name="theme-color"
-    content="#000000"
-  />
-  </head>
+  <meta name="theme-color" content="#000000" />
+</head>
 
 <body>
   <div id="root"></div>
